impostazione base.sass con reset e color

--- a/source/templates/includes/layout.liquid
+++ b/source/templates/includes/layout.liquid
@@ -4,15 +4,11 @@
 <!--[if IE 8]><html class="no-js lt-ie9"> <![endif]-->
 <!--[if IE 9]><html class="no-js ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-  <head>
+   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <title>Novathon #withCib-25-26 June 2016, Budapest</title>
-    <meta name="description" content="Novathon #withCIB is a 24-hour innovative marathon to create cutting-edge applications for responsive, mobile and branch banking and develop new banking solutions.">
-    <meta name="keywords" content="Contextual Banking service, Augmented /Virtual reality service,Digital Branch, Digital Wallets & Money, Smart Mobile Banking APP service, team, contest, Bank, 24 hour">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <meta name="viewport" content="width=device-width">
+    <title> Modus Versus</title>
     <link href="/css/style.min.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
