--- a/source/templates/index.liquid
+++ b/source/templates/index.liquid
@@ -7,22 +7,22 @@
 
 
 
-<div>Example description</div>
+<div>
+	
+</div>
 
 
 
-{% include 'happyClients' %}
+<!-- {% include 'happyClients' %}
 {% assign bgHappy = "red" %}
 
 
 {% include 'happyClients' %}
-{% assign bgHappy = "green" %}
+{% assign bgHappy = "green" %} -->
 
 
 
 
-<br>
-<br>
 
 
 {% include 'footer' %}
