--- a/source/templates/includes/header.liquid
+++ b/source/templates/includes/header.liquid
@@ -1,4 +1,11 @@
 <header class="header">
-	<div class="header">
+	<div class="container">
+		<a class="header__brand" href="#">
+			<span class="header__brandText"> MODUS versus</span>
+		</a>
+		
+
+
+	</div>
 
 </header>
