--- a/source/templates/includes/layout.liquid
+++ b/source/templates/includes/layout.liquid
@@ -18,10 +18,11 @@
   </head>
 
   <body>
-		{% block content %}
-    {% endblock %}
+    <div class="wrapper">
+		  {% block content %}
+      {% endblock %}
 
-
+    </div>
 
     <script src="/js/script.min.js"></script>
   </body>
