--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -73,14 +73,15 @@ $txt_gray: #777777
 $bold_gray: #7f8c8c
 
 .wrapper
-	max-width: 1440px
-	background-color: black
+	max-width: 1500px
+	margin: 0 auto
 
 .container 
-	padding: 0 164px
-	background-color: white
+	padding: 0 150px
 
-
+.responsiveImg
+	display: block
+	width: 100%
 
 
 
