--- a/source/templates/includes/header.liquid
+++ b/source/templates/includes/header.liquid
@@ -1,11 +1,80 @@
 <header class="header">
 	<div class="container">
-		<a class="header__brand" href="#">
-			<span class="header__brandText"> MODUS versus</span>
-		</a>
-		
-
-
+		<div class="header__container clearfix">
+			<a class="header__brand" href="#">
+				MODUS 
+				<span class="header__brandText"> versus</span>
+			</a>
+			<nav class="header__navbar" >
+				<li class="header__item" >
+					<a class="header__menu active" href="#" title="menu-voice">
+						home
+					</a>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#" title="menu-voice">
+						about
+					</a>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#" title="menu-voice">
+						services
+					</a>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#header__subMenu" title="menu-voice">
+						<span class="header__link">
+							<i class="material-icons iconNav">keyboard_arrow_down</i>
+							portfolio	
+						</span>
+					</a>
+					<ul class="header__subMenu">
+						<li class="header__voice">
+							<a class="header__subVoice" href="#"> 
+								portfolio column page	
+							</a>
+						</li>
+						<li class="header__voice">
+							<a class="header__subVoice" href="#"> 
+								portfolio column page
+							</a>
+						</li>
+						<li class="header__voice">
+							<a class="header__subVoice" href="#"> 
+								portfolio column page
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#" title="menu-voice">
+						blog
+					</a>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#" title="menu-voice">
+						features
+					</a>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#" title="menu-voice">
+						contacts
+					</a>
+				</li>
+				<li class="header__item" >
+					<a class="header__menu" href="#" title="menu-voice">
+						<span class="header__link">
+							<i class="material-icons iconNav">search</i>	
+						</span>
+					</a>
+				</li>
+			</nav>
+		</div>
 	</div>
-
+	<div class="header__border">
+		<img class="responsiveImg" src="img/patheader.png" alt="border-header">
+	</div>
 </header>
+
+
+
