--- a/source/templates/includes/layout.liquid
+++ b/source/templates/includes/layout.liquid
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width">
     <title> Modus Versus</title>
     <link href="/css/style.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
