aggiornamenti modifiche footer and header

--- a/source/sass/modules/_header.sass
+++ b/source/sass/modules/_header.sass
@@ -46,8 +46,13 @@ li
 .iconNav
 	vertical-align: middle
 
+.header__subMenu
+	background-color: #20a8da
+
 .header__voice
 	display: none
+	&.active
+		display: block
 
 
 
