--- a/source/sass/modules/_footer.sass
+++ b/source/sass/modules/_footer.sass
@@ -99,7 +99,7 @@
 
 .footer__botton
 	background-color: $dark_violet
-	padding: 20px 0
+	padding: 24px 0
 
 .footer__date
 	color: black
@@ -113,3 +113,9 @@
 
 .footer__right
 	float: right
+
+.footer__socialitem
+	color: white
+	font-size: 21px
+	margin-left: 26px
+	display: inline-block
