--- a/source/templates/includes/footer.liquid
+++ b/source/templates/includes/footer.liquid
@@ -19,12 +19,26 @@
 				 <span class="footer__title">Company</span>
 				</a>
 				<ul class="footer__list">
-					<li class="footer__item">About</li>
-					<li class="footer__item">FAQ</li>
-					<li class="footer__item">Contact</li>
-					<li class="footer__item">Terms</li>
-					<li class="footer__item">Privacy</li>
-					<li class="footer__item">Testimonials</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true"></i>
+						About
+					</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true"></i>
+						FAQ
+					</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true">
+						</i>
+						Contact
+					</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true"></i>
+						Terms
+					</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true"></i>
+						Privacy
+					</li>
+					<li class="footer__item">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+						Testimonials
+					</li>
 				</ul>
 			</div>
 			<div class="footer__link">
@@ -32,10 +46,20 @@
 				 <span class="footer__title">Community</span>
 				</a>
 				<ul class="footer__list">
-					<li class="footer__item">Blog</li>
-					<li class="footer__item">Forum</li>
-					<li class="footer__item">Support</li>
-					<li class="footer__item">Newsletter</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true"></i>
+						Blog
+					</li>
+					<li class="footer__item">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+						Forum
+					</li>
+					<li class="footer__item">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+						Support
+					</li>
+					<li class="footer__item"><i class="fa fa-angle-right" aria-hidden="true"></i>
+						Newsletter
+					</li>
 				</ul>
 			</div>
 			<div class="footer__blog">
@@ -72,7 +96,18 @@
 		</div>
 		<div class="footer__right">
 			<ul class="footer__sociallist">
-				<li class="footer__socialitem">ciao</li>
+				<li class="footer__socialitem">
+					<i class="fa fa-facebook" aria-hidden="true"></i>
+				</li>
+				<li  class="footer__socialitem">
+					<i class="fa fa-google-plus" aria-hidden="true"></i>
+				</li>
+				<li  class="footer__socialitem">
+					<i class="fa fa-tumblr" aria-hidden="true"></i>
+				</li>
+				<li  class="footer__socialitem">
+					<i class="fa fa-rss" aria-hidden="true"></i>
+				</li>
 			</ul>
 		</div>
 	</div>
