--- a/source/templates/includes/layout.liquid
+++ b/source/templates/includes/layout.liquid
@@ -12,6 +12,9 @@
     <title> Modus Versus</title>
     <link href="/css/style.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="/css/font-awesome.css">
+	<link>
+
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
