--- a/source/templates/index.liquid
+++ b/source/templates/index.liquid
@@ -1,23 +1,14 @@
 {% extends layout %}
 
-
 {% block content %}
 
-
-<!-- ***************************************************************** -->
-<!-- HTML CONTENT-->
-<!-- ***************************************************************** -->
 
 
 	{% include 'header' %}
 
+	{% include 'contact' %}
+
 	{% include 'footer' %}
-
-
-
-
-
-
 
 
 
