pagina contact finitia con responsive + footer responsive

--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -78,7 +78,12 @@ $bold_gray: #7f8c8c
 	margin: 0 auto
 
 .container
-	padding: 0 150px
+	padding: 0 30px
+	@media screen and (min-width: 650px)
+		padding: 0 100px
+
+	@media screen and (min-width: 1024px)
+		padding: 0 150px
 
 .responsiveImg
 	display: block
