--- a/source/sass/modules/_contact.sass
+++ b/source/sass/modules/_contact.sass
@@ -5,62 +5,98 @@
 
 .breadcrumb__left
 	float: left
-	font-size: 20px
+	font-size: 15px
 	text-transform: uppercase
+
+	@media screen and (min-width: 650px)
+		font-size: 20px
 
 .breadcrumb__right
 	float: right
 
+
 .breadcrumb__item
 	display: inline-block
-	margin-left: 20px
+	margin-left: 7px
+
+	@media screen and (min-width: 650px)
+		margin-left: 20px
 
 .map
-	padding: 50px 0
+	padding: 35px 0
+
+	@media screen and (min-width: 650px)
+		padding: 50px 0
 
 .img__responsive
 	width: 100%
 	display: block
+
 .info
 	background-color: #ececec
 	padding: 25px
-	margin-bottom: 50px
+	margin-bottom: 35px
+
+	@media screen and (min-width: 650px)
+		margin-bottom: 50px
 
 .info__text
 	color: $bold_gray
 	font-size: 12px
-	line-height: 15px
+	line-height: 22px
+
+	@media screen and (min-width: 650px)
+		font-size: 12px
+		line-height: 15px
+
 
 .contact
 	width: 100%
 	color: $bold_gray
-	margin-bottom: 50px
+	padding-bottom: 50px
 
 
 .contact__form
-	width: 70%
-	float: left
+	width: 100%
+
+	@media screen and (min-width: 1024px)
+		width: 70%
+		float: left
 
 .contact__title
 	text-transform: uppercase
 	font-size: 20px
 	font-weight: 500
-	padding-bottom: 50px
+	padding-bottom: 30px
+
+	@media screen and (min-width: 1024px)
+		padding-bottom: 50px
 
 .form
 	width: 100%
 
 .form__input
-	width: 40%
+	width: 70%
 	background-color: #e5e6e6
 	padding: 15px 10px
 	margin-bottom: 15px
-	display: block
+	display: inline-block
 	border: none
+	margin-right: 10px
+
+	@media screen and (min-width: 1024px)
+		width: 40%
+
+.form__label
+	font-size: 12px
+
+	@media screen and (min-width: 1024px)
+		font-size: 15px
 
 .form__textarea
 	background-color: #e5e6e6
 	border: none
+	width: 90%
 
 .form__button
 	background-color: $azure
@@ -72,12 +108,14 @@
 	text-transform: uppercase
 	color: white
 
-.form__subject
-
-
 .contact__address
-	width: 30%
-	float: right
+	width: 100%
+	margin-top: 35px
+
+	@media screen and (min-width: 1024px)
+		width: 30%
+		float: right
+		margin-top: 0px
 
 .contact__icon
 	font-size: 40px
@@ -85,3 +123,31 @@
 
 .contact__text
 	font-size: 10px
+
+.contact__item
+	display: block
+	margin-top: 20px
+
+	&:first-child
+		margin-top: 0px
+
+.contact__icon
+	display: inline-block
+	color: $txt_gray
+	font-size: 20px
+	margin-right: 13px
+
+.mapIcon
+	font-size: 40px
+	color: $violet
+
+.contact__text
+	display: inline-block
+	color: $txt_gray
+	font-size: 10px
+	@media screen and (min-width: 1024px)
+		font-size: 13px
+
+.contact__email
+	color: $azure
+	text-decoration: underline
