--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -74,6 +74,8 @@ $azure: #37b1de
 $grey: #ececec
 $txt_gray: #777777
 $bold_gray: #7f8c8c
+$bord_violet: #743e59
+$bord_azure: #20a8da
 
 .wrapper
 	max-width: 1500px
@@ -82,9 +84,13 @@ $bold_gray: #7f8c8c
 .container
 	padding: 0 150px
 
+.bodyColor
+	background-color: $background
+
 .responsiveImg
 	display: block
 	width: 100%
+	max-height: 100%
 .slider
 	position: relative
 
@@ -146,7 +152,8 @@ $bold_gray: #7f8c8c
 .section
 	padding-top: 30px
 	position: relative
-	background-color: $background
+	// background-color: $background
+	padding-bottom: 60px
 
 .sectionGrey
 	background-color: $grey
@@ -174,34 +181,45 @@ $bold_gray: #7f8c8c
 	text-transform: uppercase
 	text-align: center
 	border-radius: 7px
-	box-shadow: 0px 4px 0px #20a8da
+	box-shadow: 0px 4px 0px $bord_azure
+	font-weight: 300
 .button 
 	padding: 15px 40px
 
 .widgets
 	padding-top: 50px
+	width: 100%
 
 .widget__total
-	// display: inline-block
-	// float: left
+	display: inline-block
+	float: left
+	width: 23%
+	margin-left: 2.5%
+	font-size: 0px
+	vertical-align: bottom
+
+	&:first-child
+		margin-left: 0 
 
 .widget__singlePart
 	background-color: #fff
-	width: 20%
 
 .widget__container
-	padding: 30px
+	padding: 30px 20px 73px
 	text-align: center
 .widget__icon
 	font-size: 56px
-.like
-	color: $azure
+
+.widgIcon
+	color: $violet
+	&.active
+		color: $azure
 
 .widget__txtBold
 	color: $bold_gray
 	font-size: 18px
 	font-weight: bold
-	line-height: 30px
+	line-height: 65px
 	text-transform: uppercase
 	margin-bottom: 17px
 
@@ -209,9 +227,157 @@ $bold_gray: #7f8c8c
 	color: $txt_gray
 	font-size: 14px
 	font-weight: 300
+	line-height: 23px
+
+.widget__button
+	background-color: $violet
+	display: inline-block
+	font-size: 20px
+	text-align: center
+	border-radius: 7px
+	box-shadow: 0px 4px 0px $bord_violet
+	left: 11.5%
+	position: relative
+	margin: -10% 0%
+	vertical-align: bottom
+	font-weight: 300
+	&.active
+		background-color: $azure
+		box-shadow: 0px 4px 0px $bord_azure
+
+.sectionVisual__grey
+	background-image: url('/img/path.png')
+	background-position: top center
+	padding: 54px 0
+	background-repeat: no-repeat
+	background-color: $grey
+	padding-bottom: 350px
+
+.sectionVisual__greyBox
+	text-align: center
+
+.sectionVisual__greyTitle
+	font-size: 40px
+	font-weight: 600
+	color: $azure
+
+.sectionVisual__greyTxt
+	font-size: 14px
+	line-height: 30px
+	color: $txt_gray
+	font-weight: 300
+
+.sectionVisual
+	position: relative
+	margin: -250px auto 0px
+	margin-bottom: 80px
+
+.sectionVisual__item
+	position: relative
+	display: inline-block
+	font-size: 0
+	margin: 0
+
+	&.left
+		top: -40px
+	&.center
+		margin-left: -120px
+		z-index: 3
+	&.right
+		top: -40px
+		margin-left: -80px
+.section__end
+	width: 20%
+	display: inline-block
+	margin-left: 4%
+	vertical-align: top
+
+	&:first-child
+		margin-left: 0%
+
+// .sectionList
+// 	display: inline-block
+// 	// width: 25%
+
+.sectionList__title
+	color: $bold_gray
+	font-size: 16px
+	font-weight: 900
+	line-height: 60px
+
+.sectionList__list
+	line-height: 22px
+.list
+	color: $violet
+
+.sectionList__txt
+	font-size: 13px
+	color: $txt_gray
+	display: inline-block
+
+.sectionGrafic
+	display: inline-block
+	width: 50%
+
+.sectionGrafic__title
 	line-height: 20px
 
+.sectionGrafic__box
+	padding-top: 45px
 
+.sectionGrafic__single
+	display: inline-block
+	float: left
+	width: 23%
+	margin-left: 2.5%
+	font-size: 0px
+	vertical-align: bottom
+
+	&:first-child
+		margin-left: 0 
+
+.sectionTxt__txt
+	line-height: 20px
+	background-color: #fff
+	padding: 10px 15px
+
+.sectionTxt__cit
+	color: $violet
+	padding-top: 10px
+	text-align: center
+
+.sectionClient
+	padding-top: 30px
+
+.sectionClient__txt
+	display: inline-block
+	font-size: 16px
+	font-weight: 900
+	color: $bold_gray
+
+.sectionClient__barra
+	display: inline-block
+	border: 1px solid $txt_gray
+	width: 80%
+	margin: 0px 7px
+
+.sectionClient__icon
+	display: inline-block
+.icon-barra
+	background-color: $bold_gray
+	padding: 2px 3px
+
+.sectionClient__box
+	padding: 40px 0px
+.sectionClient__brand
+	display: inline-block
+	background-color: #fff
+	width: 13%
+	padding: 34px
+	margin-left: 4%
+
+	&:first-child
+		margin-left: 0%
 
 
 
