--- a/source/sass/modules/_header.sass
+++ b/source/sass/modules/_header.sass
@@ -35,11 +35,11 @@ li
 	&.active 
 		font-size: 14px
 		background-color: $dark_violet
-		box-shadow: 0px 4px 0px #743e59
+		box-shadow: 0px 4px 0px $bord_violet
 
 	&:hover
 		background-color: $azure
-		box-shadow: 0px 4px 0px #20a8da
+		box-shadow: 0px 4px 0px $bord_azure
 
 .header__link 
 	display: inline-block
