--- a/source/templates/index.liquid
+++ b/source/templates/index.liquid
@@ -36,7 +36,7 @@
 			</a>
 			<!-- 	mancano le line che indicano lo spostamento delle slider -->	
 		</div>
-		<div class="container section">
+		<div class="container section bodyColor">
 			<div class="sectionGrey clearfix">
 				<div class="sectionGrey__txt">
 					<h3 class="sectionGrey__title">
@@ -54,17 +54,39 @@
 			</div>
 
 			<div class="widgets clearfix">
+
 				<div class="widget__total">
 					<div class="widget__singlePart">
 						<div class="widget__container">
 							<a class="widget__icon" href="#">
-								<i class="fa fa-thumbs-o-up like" aria-hidden="true"></i>
+								<i class="fa fa-thumbs-o-up widgIcon active" aria-hidden="true"></i>
 							</a>
 							<p class="widget__txtBold">
 								suspendisse
 							</p>
 							<p class="widget__txt">
-								Quisque id tellus quis risus vehicula vehicula ut turpis
+								Quisque id tellus quis risus vehicula vehicula ut turpis lorem ipsum dolor sit amet vehicula
+							</p>
+						</div>
+					</div>
+					<div class="widget__button active">
+						<a class="button" href="#">
+							read more
+						</a>
+					</div>
+				</div>
+
+				<div class="widget__total">
+					<div class="widget__singlePart">
+						<div class="widget__container">
+							<a class="widget__icon" href="#">
+								<i class="fa fa-key widgIcon" aria-hidden="true"></i>
+							</a>
+							<p class="widget__txtBold">
+								maecenas
+							</p>
+							<p class="widget__txt">
+								Quisque id tellus quis risus vehicula vehicula ut turpis lorem ipsum dolor sit amet vehicula lorem ipsum
 							</p>
 						</div>
 					</div>
@@ -79,13 +101,13 @@
 					<div class="widget__singlePart">
 						<div class="widget__container">
 							<a class="widget__icon" href="#">
-								<i class="fa fa-thumbs-o-up like" aria-hidden="true"></i>
+								<i class="fa fa-flag widgIcon" aria-hidden="true"></i>
 							</a>
 							<p class="widget__txtBold">
-								suspendisse
+								aliquam
 							</p>
 							<p class="widget__txt">
-								Quisque id tellus quis risus vehicula vehicula ut turpis
+								Quisque id tellus quis risus vehicula vehicula ut turpis lorem ipsum dolor sit amet vehicula
 							</p>
 						</div>
 					</div>
@@ -100,34 +122,13 @@
 					<div class="widget__singlePart">
 						<div class="widget__container">
 							<a class="widget__icon" href="#">
-								<i class="fa fa-thumbs-o-up like" aria-hidden="true"></i>
+								<i class="fa fa-hourglass-half widgIcon" aria-hidden="true"></i>
 							</a>
 							<p class="widget__txtBold">
-								suspendisse
+								habitasse
 							</p>
 							<p class="widget__txt">
-								Quisque id tellus quis risus vehicula vehicula ut turpis
-							</p>
-						</div>
-					</div>
-					<div class="widget__button">
-						<a class="button" href="#">
-							read more
-						</a>
-					</div>
-				</div>
-
-				<div class="widget__total">
-					<div class="widget__singlePart">
-						<div class="widget__container">
-							<a class="widget__icon" href="#">
-								<i class="fa fa-thumbs-o-up like" aria-hidden="true"></i>
-							</a>
-							<p class="widget__txtBold">
-								suspendisse
-							</p>
-							<p class="widget__txt">
-								Quisque id tellus quis risus vehicula vehicula ut turpis
+								Quisque id tellus quis risus vehicula vehicula ut turpis lorem ipsum dolor sit amet vehicula lorem ipsum 
 							</p>
 						</div>
 					</div>
@@ -139,8 +140,155 @@
 				</div>
 			</div>
 		</div>
+		<div class="sectionVisual__grey">
+			<div class="container">
+				<div class="sectionVisual__greyBox">
+					<h2 class="sectionVisual__greyTitle">
+						WHY MODUS VERSUS?
+					</h2>
+					<p class="sectionVisual__greyTxt">
+						Capacitance cascading integer reflective interface data development high bus cache dithering transponder. 
+					</p>
+				</div>
+			</div>
+		</div>
+		<div class="container">
+			<div class="sectionVisual">
+				<div class="sectionVisual__item left" href="#">
+					<a class="sectionVisual__img" href="#">
+						<img class="responsiveImg" src="img/visual-left.png" alt="image-visual">
+					</a>
+				</div>
 
+				<div class="sectionVisual__item center" href="#">
+					<a class="sectionVisual__img" href="#">
+						<img class="responsiveImg" src="img/visual-bg.png" alt="image-visual">
+					</a>
+				</div>
 
+				<div class="sectionVisual__item right" href="#">
+					<a class="sectionVisual__img" href="#">
+						<img class="responsiveImg" src="img/visual-right.png" alt="image-visual">
+					</a>
+				</div>
+			</div>
+		</div>
+		<div class="container sectList bodyColor">
+			<div class="sectionList section__end">
+				<p class="sectionList__title">
+					Why Choose Us?
+				</p>
+				<ul>
+					<li class="sectionList__list">
+						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+						<p class="sectionList__txt">
+							Quisque at massa ipsum  
+						</p>
+					<li class="sectionList__list">
+						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+						<p class="sectionList__txt">
+							Maecenas a lorem augue, egestas  
+						</p>
+					</li>
+					<li class="sectionList__list">
+						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+						<p class="sectionList__txt">
+							Cras vitae felis at lacus eleifend
+						</p>
+					</li>
+					<li class="sectionList__list">
+						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+						<p class="sectionList__txt">
+							Etiam auctor diam pellentesque
+						</p>
+					</li>
+					<li class="sectionList__list">
+						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+						<p class="sectionList__txt">
+							Nulla ac massa at dolor 
+						</p>
+					</li>
+					<li class="sectionList__list">
+						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
+						<p class="sectionList__txt">
+							Condimentum eleifend vitae vitae
+						</p>
+					</li>	
+				</ul>
+			</div>
+			<div class="sectionGrafic section__end">
+				<p class="sectionGrafic__title sectionList__txt">
+					Curabitur quis nisl in leo euismod venenatis eu in diam. Etiam auctor diam pellentesque lectus vehicula mattis. Nulla ac massa at dolor condimentum eleifend vitae vitae urna.
+				</p>
+				<div class="sectionGrafic__box">
+					<div class="sectionGrafic__single">
+						<img class="responsiveImg" src="img/index1.png" alt="image-grafico">
+						<p class="widget__txtBold sectionGrafic__txt">
+							suspendisse
+						</p>
+					</div>
+					<div class="sectionGrafic__single">
+						<img class="responsiveImg" src="img/index2.png" alt="image-grafico">
+						<p class="widget__txtBold sectionGrafic__txt">
+							maecenas
+						</p>
+					</div>
+					<div class="sectionGrafic__single">
+						<img class="responsiveImg" src="img/index3.png" alt="image-grafico">
+						<p class="widget__txtBold sectionGrafic__txt">
+							aliquam
+						</p>
+					</div>
+					<div class="sectionGrafic__single">
+						<img class="responsiveImg" src="img/index4.png" alt="image-grafico">
+						<p class="widget__txtBold sectionGrafic__txt">
+							habitasse
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="sectionTxt section__end">
+				<p class="sectionList__title">
+					What Client’s Say?
+				</p>
+				<p class="sectionList__txt sectionTxt__txt">
+					Curabitur quis nisl in leo euismod venenatis eu in diam. Etiam auctor diam pellentesque lectus vehicula mattis. Nulla ac massa at dolor condimentum
+				</p>
+				<p class="sectionTxt__cit" >
+					Jonh Doe
+				</p>			
+			</div>
+			<div class="sectionClient">
+				<p class="sectionClient__txt">
+					our happy clients
+				</p>
+				<div class="sectionClient__barra"></div>
+				<a class="sectionClient__icon" href="#">
+					<i class="fa fa-chevron-left icon-barra" aria-hidden="true"></i>
+					<i class="fa fa-chevron-right icon-barra" aria-hidden="true"></i>
+				</a>
+			</div>
+			<div class="sectionClient__box">
+				<div class="sectionClient__brand">
+					<img class="responsiveImg" src="img/jquery.png" alt="#">
+				</div>
+				<div class="sectionClient__brand">
+					<img class="responsiveImg" src="img/jquery.png" alt="#">
+				</div>
+				<div class="sectionClient__brand">
+					<img class="responsiveImg" src="img/jquery.png" alt="#">
+				</div>
+				<div class="sectionClient__brand">
+					<img class="responsiveImg" src="img/jquery.png" alt="#">
+				</div>
+				<div class="sectionClient__brand">
+					<img class="responsiveImg" src="img/jquery.png" alt="#">
+				</div>
+				<div class="sectionClient__brand">
+					<img class="responsiveImg" src="img/jquery.png" alt="#">
+				</div>
+			</div>
+		</div>
 
 
 
