--- a/source/templates/includes/news.liquid
+++ b/source/templates/includes/news.liquid
@@ -3,12 +3,12 @@
 		<div class="article__info">
 			<span class="article__date">{{item.data}}</span>
 			<span class="article__type">
-				<i class="article__icon fa fa-file-text" aria-hidden="true"></i>
+				{{item.icon}}
 			</span>
 		</div>
-		<div class="article__boximage">
-			<img class="article__img" src="/img/blog_img.jpg" alt="" />
-			<h2 class="article__title">Duis dapibus aliquam mi, eget euismod sem scelerisque ut.</h2>
+		<div class="article__box">
+			<img class="article__img" src="{{item.img}}" alt="" />
+			<h2 class="article__title">{{item.title}}</h2>
 			<ul class="article__list">
 				<li class="article__item">Posted by <span class="violet">Admin</span> in Phtography</li>
 				<li class="article__item violet">
@@ -19,9 +19,9 @@
 				</li>
 			</ul>
 			<p class="article__text">
-				Maecenas eget turpis turpis. Nunc vel metus augue. Aenean euismod cursus ligula eget dapibus. Praesent vel erat in tortor placerat dignissim. Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+				{{item.text}}
 			</p>
-			<a class="article__continue"href="#">Continue reading <i class="fa fa-arrow-right" aria-hidden="true"></i>
+			<a class="article__continue"href="#">{{item.more}}
 			</a>
 		</div>
 	</div>
