--- a/source/sass/modules/_footer.sass
+++ b/source/sass/modules/_footer.sass
@@ -30,15 +30,25 @@
 
 .footer__brand
 	color: white
-	font-size: 30px
+	font-size: 18px
 	font-weight: 800
 	text-transform: uppercase
 	text-decoration: none
 
+	@media screen and (min-width: 650px)
+		font-size: 30px
+	@media screen and (min-width: 1024px)
+		font-size: 30px
+
 .footer__light
-	font-size: 18px
+	font-size: 14px
 	font-weight: 200
 	text-transform: none
+
+	@media screen and (min-width: 650px)
+		font-size: 25
+	@media screen and (min-width: 1024px)
+		font-size: 18px
 
 .footer__text
 	font-size: 13px
