--- a/source/templates/includes/header.liquid
+++ b/source/templates/includes/header.liquid
@@ -5,7 +5,11 @@
 				MODUS 
 				<span class="header__brandText"> versus</span>
 			</a>
-			<nav class="header__navbar" >
+			<div class="header__mobileIcon">
+				<a class="headerMobile__hamburger j-menuToggle" href="#"><i class="material-icons">menu</i></a>
+			</div>
+			
+			<nav class="header__navbar clearfix" >
 				<li class="header__item" >
 					<a class="header__menu active" href="#" title="menu-voice">
 						home
@@ -61,8 +65,8 @@
 						contacts
 					</a>
 				</li>
-				<li class="header__item" >
-					<a class="header__menu" href="#" title="menu-voice">
+				<li class="header__item searchItem" >
+					<a class="header__menu searchMenu" href="#" title="menu-voice">
 						<span class="header__link">
 							<i class="material-icons iconNav">search</i>
 						</span>
