--- a/source/templates/index.liquid
+++ b/source/templates/index.liquid
@@ -178,7 +178,7 @@
 				<p class="sectionList__title">
 					Why Choose Us?
 				</p>
-				<ul>
+				<ul class="sectionList__content">
 					<li class="sectionList__list">
 						<i class="fa fa-arrow-right list" aria-hidden="true"></i>
 						<p class="sectionList__txt">
