--- a/source/sass/modules/_base.sass
+++ b/source/sass/modules/_base.sass
@@ -82,9 +82,10 @@ $bord_azure: #20a8da
 	margin: 0 auto
 
 .container
-	padding: 0 30px
+	padding: 0 18px
+
 	@media screen and (min-width: 650px)
-		padding: 0 100px
+		padding: 0 25px
 
 	@media screen and (min-width: 1024px)
 		padding: 0 150px
@@ -108,40 +109,71 @@ $bord_azure: #20a8da
 	position: absolute
 	top: 50%
 	left: 50%
+	width: 100%
 	transform: translate(-50%, -50%)
 	color: #fff
 	text-align: center
 
 .slider__title
-	line-height: 60px
+	line-height: 36px
+
+	@media screen and (min-width: 650px)
+		
+	@media screen and (min-width: 1024px)
+		line-height: 60px
 
 .slider__titleTxt
 	background-color: $azure
-	font-size: 50px
-	font-weight: 900
+	font-size: 16px
+	font-weight: 600
 	text-transform: uppercase
 	display: inline-block
-	padding: 4px
+	padding: 0px 6px
 	border-radius: 8px
+	opacity: 0.9
+
+	@media screen and (min-width: 650px)
+		font-size: 33px
+		font-weight: 700
+		padding: 6px 10px
+
+	@media screen and (min-width: 1024px)
+		font-size: 50px
+		font-weight: 900
+		padding: 11px 18px
+
 
 .slider__subtitle
 	background-color: #3f4646
-	width: 80%
+	width: 72%
 	margin: 0 auto
-	padding: 14px
+	padding: 11px
 	border-radius: 8px
+	opacity: 0.9
+	margin-top: 10px
 
+	@media screen and (min-width: 650px)
+		padding: 10px
+	@media screen and (min-width: 1024px)
+		width: 43%
+		padding: 14px
 
 .slider__subtitleTxt
-	font-size: 16px
+	font-size: 13px
 	line-height: 20px
+
+	@media screen and (min-width: 650px)
+		font-size: 14px
+	@media screen and (min-width: 1024px)
+		font-size: 16px
+		line-height: 25px
 
 .arrow
 	z-index: 3
 	background-color: $azure
 	position: absolute
-	font-size: 40px
-	padding: 5px 8px
+	font-size: 26px
+	padding: 0px 6px
 
 	&.next
 		top: 50%
@@ -151,6 +183,14 @@ $bord_azure: #20a8da
 		top: 50%
 		right: 0
 		transform: translate(0%, -50%)
+
+	@media screen and (min-width: 650px)
+		font-size: 40px
+		padding: 5px 8px
+	@media screen and (min-width: 1024px)
+		font-size: 40px
+		padding: 5px 8px
+
 .arrows
 	display: inline-block
 
@@ -162,34 +202,68 @@ $bord_azure: #20a8da
 
 .sectionGrey
 	background-color: $grey
-	padding: 20px
+	padding: 14px 35px
+	vertical-align: middle
 
 .sectionGrey__txt
 	display: inline-block
+	vertical-align: middle
+
+	@media screen and (min-width: 650px)
+		width: 66%
+	@media screen and (min-width: 1024px)
 
 .sectionGrey__title
 	color: $bold_gray
-	font-size: 30px
+	font-size: 16px
 	font-weight: 600
+
+	@media screen and (min-width: 650px)
+		font-size: 22px
+
+	@media screen and (min-width: 1024px)
+		font-size: 30px
 
 .sectionGrey__subtitle
 	color: $txt_gray
-	font-size: 13px
-	line-height: 45px
+	font-size: 11px
+	line-height: 19px
 	font-weight: 300
+
+	@media screen and (min-width: 650px)
+		line-height: 22px
+	@media screen and (min-width: 1024px)
+		line-height: 25px
+		font-size: 13px
+		line-height: 45px
 
 .sectionGrey__button
 	background-color: $azure
 	display: inline-block
 	float: right
-	font-size: 20px
+	font-size: 14px
 	text-transform: uppercase
 	text-align: center
 	border-radius: 7px
 	box-shadow: 0px 4px 0px $bord_azure
 	font-weight: 300
+	vertical-align: middle
+	margin: 0 auto
+
+	@media screen and (min-width: 650px)
+		font-size: 16px
+		font-weight: 400
+	@media screen and (min-width: 1024px)
+		font-weight: 300
+		font-size: 20px
+
 .button 
-	padding: 15px 40px
+	padding: 9px 20px
+
+	@media screen and (min-width: 650px)
+		padding: 10px 22px
+	@media screen and (min-width: 1024px)
+		padding: 13px 32px
 
 .widgets
 	padding-top: 50px
@@ -198,22 +272,45 @@ $bord_azure: #20a8da
 .widget__total
 	display: inline-block
 	float: left
-	width: 23%
 	margin-left: 2.5%
 	font-size: 0px
 	vertical-align: bottom
+	width: 48%
+
+	&:nth-child(2n+1)
+		margin-left: 0
 
 	&:first-child
 		margin-left: 0 
+
+	@media screen and (min-width: 650px)
+		width: 48%
+
+		&:nth-child(2n+1)
+			margin-left: 0
+	@media screen and (min-width: 1024px)
+		width: 23%
 
 .widget__singlePart
 	background-color: #fff
 
 .widget__container
-	padding: 30px 20px 73px
+	padding: 15px 6px 36px
 	text-align: center
+	margin: 18px
+	
+	@media screen and (min-width: 650px)
+		margin: 18px
+	@media screen and (min-width: 1024px)
+		padding: 30px 20px 73px
+
 .widget__icon
-	font-size: 56px
+	font-size: 33px
+
+	@media screen and (min-width: 650px)
+		font-size: 45px
+	@media screen and (min-width: 1024px)
+		font-size: 56px
 
 .widgIcon
 	color: $violet
@@ -222,17 +319,30 @@ $bord_azure: #20a8da
 
 .widget__txtBold
 	color: $bold_gray
-	font-size: 18px
+	font-size: 13px
 	font-weight: bold
-	line-height: 65px
+	line-height: 20px
 	text-transform: uppercase
 	margin-bottom: 17px
+	text-align: center
+
+	@media screen and (min-width: 650px)
+		line-height: 55px
+		margin-bottom: 0px
+		font-size: 14px
+		font-weight: 700
+	@media screen and (min-width: 1024px)
+		font-size: 18px
+		line-height: 65px
 
 .widget__txt
 	color: $txt_gray
-	font-size: 14px
+	font-size: 13px
 	font-weight: 300
-	line-height: 23px
+	line-height: 17px
+	@media screen and (min-width: 1024px)
+		line-height: 23px
+		font-size: 14px
 
 .widget__button
 	background-color: $violet
@@ -250,32 +360,68 @@ $bord_azure: #20a8da
 		background-color: $azure
 		box-shadow: 0px 4px 0px $bord_azure
 
+	@media screen and (min-width: 650px)
+		left: 25.5%
+		margin-top: -50px
+
 .sectionVisual__grey
 	background-image: url('/img/path.png')
 	background-position: top center
 	padding: 54px 0
 	background-repeat: no-repeat
 	background-color: $grey
-	padding-bottom: 350px
+	padding-bottom: 80px
+
+	@media screen and (min-width: 650px)
+		padding-bottom: 160px
+
+	@media screen and (min-width: 1024px)
+		padding-bottom: 275px
 
 .sectionVisual__greyBox
 	text-align: center
+	width: 100%
+	margin: 0 auto
+	@media screen and (min-width: 650px)
+		width: 80%
+
 
 .sectionVisual__greyTitle
-	font-size: 40px
+	font-size: 24px
 	font-weight: 600
 	color: $azure
 
+	@media screen and (min-width: 650px)
+		font-size: 28px
+	@media screen and (min-width: 1024px)
+		font-size: 40px
+
 .sectionVisual__greyTxt
-	font-size: 14px
-	line-height: 30px
+	font-size: 12px
+	line-height: 22px
 	color: $txt_gray
 	font-weight: 300
 
+	@media screen and (min-width: 650px)
+		font-size: 13px
+		line-height: 24px
+	@media screen and (min-width: 1024px)
+		font-size: 14px
+		line-height: 30px
+
 .sectionVisual
 	position: relative
-	margin: -250px auto 0px
+	margin: -200px auto 0px
 	margin-bottom: 80px
+	text-align: center
+
+	@media screen and (min-width: 650px)
+		margin: -130px auto 0px
+		margin-bottom: 80px
+	@media screen and (min-width: 1024px)
+		margin: 0px auto 
+		margin-bottom: 0px
+
 
 .sectionVisual__item
 	position: relative
@@ -284,31 +430,69 @@ $bord_azure: #20a8da
 	margin: 0
 
 	&.left
-		top: -40px
+		top: -70px
+		width: 40%
 	&.center
-		margin-left: -120px
+		margin-left: -90px
 		z-index: 3
+		width: 50%
 	&.right
-		top: -40px
-		margin-left: -80px
+		top: -70px
+		margin-left: -33px
+		width: 40%
+
+	@media screen and (min-width: 650px)
+		&.left
+			width: 25%
+		&.center
+			width: 50%
+		&.right
+			width: 25%
+
+	@media screen and (min-width: 1024px)
+		&.left
+			top: -40px
+			width: 32%
+		&.center
+			margin-left: -120px
+			z-index: 3
+			width: 50%
+		&.right
+			top: -40px
+			margin-left: -80px
+			width: 32%
+
 .section__end
-	width: 20%
+	width: 100%
 	display: inline-block
-	margin-left: 4%
 	vertical-align: top
 
-	&:first-child
-		margin-left: 0%
+	@media screen and (min-width: 650px)
+		width: 30%
+		&.sectionTxt
+			width: 100%
+			margin: 0 auto
+			text-align: center
 
-// .sectionList
-// 	display: inline-block
-// 	// width: 25%
+	@media screen and (min-width: 1024px)
+		width: 20%
+		margin-left: 4%
+		&:first-child
+			margin-left: 0%
+
 
 .sectionList__title
 	color: $bold_gray
 	font-size: 16px
 	font-weight: 900
-	line-height: 60px
+	padding: 20px 0px
+	text-align: center
+
+	@media screen and (min-width: 650px)
+		padding: 35px 0px 20px
+
+	@media screen and (min-width: 1024px)
+		padding: 35px 0px
 
 .sectionList__list
 	line-height: 22px
@@ -320,15 +504,29 @@ $bord_azure: #20a8da
 	color: $txt_gray
 	display: inline-block
 
+	@media screen and (min-width: 650px)
+		font-size: 11px
+
 .sectionGrafic
 	display: inline-block
-	width: 50%
+	width: 100%
+
+	@media screen and (min-width: 650px)
+		width: 65%
+	@media screen and (min-width: 1024px)
+		width: 50%
 
 .sectionGrafic__title
-	line-height: 20px
+	line-height: 18px
+	padding-top: 35px
+	text-align: center
+	@media screen and (min-width: 1024px)
+		line-height: 20px
 
 .sectionGrafic__box
 	padding-top: 45px
+	@media screen and (min-width: 1024px)
+		padding-top: 20px
 
 .sectionGrafic__single
 	display: inline-block
@@ -345,6 +543,10 @@ $bord_azure: #20a8da
 	line-height: 20px
 	background-color: #fff
 	padding: 10px 15px
+	
+	@media screen and (min-width: 650px)
+		width: 85%
+
 
 .sectionTxt__cit
 	color: $violet
@@ -356,15 +558,24 @@ $bord_azure: #20a8da
 
 .sectionClient__txt
 	display: inline-block
-	font-size: 16px
-	font-weight: 900
+	font-size: 14px
+	font-weight: 700
 	color: $bold_gray
+
+	@media screen and (min-width: 650px)
+		font-size: 14px
+	@media screen and (min-width: 1024px)
+		font-size: 16px
+		font-weight: 900
 
 .sectionClient__barra
 	display: inline-block
 	border: 1px solid $txt_gray
 	width: 80%
 	margin: 0px 7px
+
+	@media screen and (min-width: 650px)
+		width: 72%
 
 .sectionClient__icon
 	display: inline-block
@@ -374,16 +585,30 @@ $bord_azure: #20a8da
 
 .sectionClient__box
 	padding: 40px 0px
+
 .sectionClient__brand
 	display: inline-block
 	background-color: #fff
-	width: 13%
+	width: 29%
 	padding: 34px
 	margin-left: 4%
+	margin-bottom: 20px
 
-	&:first-child
+	&:nth-child(3n+1)
 		margin-left: 0%
 
+	@media screen and (min-width: 650px)
+		width: 30%
+
+		&:nth-child(3n+1)
+			margin-left: 0%
+
+	@media screen and (min-width: 1024px)
+		width: 13%
+		margin-left: 4%
+		
+		&:first-child :nth-child(3n+1)
+			margin-left: 0%
 
 
 
