--- a/source/sass/modules/_header.sass
+++ b/source/sass/modules/_header.sass
@@ -1,5 +1,6 @@
 .header
 	background-color: $violet
+	width: 100%
 a
 	text-decoration: none
 	color: #fff
@@ -10,20 +11,75 @@ li
 .header__container 
 	padding: 20px 0 14px
 
+	// .menuMobile &
+	// 	left: 0
+
+	@media screen and (min-width: 650px)
+		padding: 20px 0 14px
+
+	@media screen and (min-width: 1024px)
+		padding: 20px 0 14px
+		
+
+
 .header__brand
-	font-size: 30px
+	font-size: 18px
 	font-weight: 900
 
+	@media screen and (min-width: 650px)
+		font-size: 30px
+		display: block
+		text-align: center 
+	
+	@media screen and (min-width: 1024px)
+		font-size: 30px
+		font-weight: 900
+		display: inline-block
+
 .header__brandText
-	font-size: 25px
+	font-size: 14px
 	font-weight: 400
 	display: inline-block
 
-.header__navbar
+	@media screen and (min-width: 650px)
+		font-size: 25px
+	@media screen and (min-width: 1024px)
+		font-size: 25px
+
+.header__mobileIcon
+	display: inline-block
 	float: right
+
+	@media screen and (min-width: 650px)
+		display: none
+	@media screen and (min-width: 1024px)
+		display: none
+
+.header__navbar
+	display: none
+	@media screen and (min-width: 650px)
+		padding-top: 8px
+		float: none
+		text-align: center
+		display: block
+
+	@media screen and (min-width: 1024px)
+		float: right
+		padding-top: 0px
+		display: inline-block
 
 .header__item
 	display: inline-block
+
+	@media screen and (min-width: 650px)
+		&.searchItem
+			float: right
+			border-left: 2px solid $bord_violet
+
+	@media screen and (min-width: 1024px)
+		&.searchItem
+			float: none
+			border-left: none
 
 .header__menu
 	font-size: 13px
@@ -40,6 +96,25 @@ li
 	&:hover
 		background-color: $azure
 		box-shadow: 0px 4px 0px $bord_azure
+
+	@media screen and (min-width: 650px)
+		font-size: 11px
+		padding: 7px 11px
+
+		&.active 
+			font-size: 12px
+
+		&.searchMenu
+			padding: 4px 6px
+
+	@media screen and (min-width: 1024px)
+		font-size: 13px
+		font-weight: 400
+		text-transform: uppercase
+		padding: 7px 17px
+		border-radius: 8px
+		&.active 
+			font-size: 14px
 
 .header__link 
 	display: inline-block
