--- a/source/templates/includes/layout.liquid
+++ b/source/templates/includes/layout.liquid
@@ -29,6 +29,8 @@
     {% block content %}
     {% endblock %}
   </div>
+    <script src="https://code.jquery.com/jquery-1.12.2.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   
     <script src="/js/script.min.js"></script>
   </body>
