pagina portfolio manca responsive

--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -5,3 +5,5 @@
 @import "modules/navigation"
 @import "modules/bloglisting"
 @import "modules/news"
+@import "modules/portfolio"
+@import "modules/portfoliopost"
