--- a/source/sass/modules/news.sass
+++ b/source/sass/modules/news.sass
@@ -26,6 +26,7 @@
 	font-size: 16px
 	margin-bottom: 21px
 	line-height: 20px
+	box-shadow: 0px 8px 8px #dedede
 	border: 1px solid #efefef
 	@media screen and (min-width: 650px)
 		font-size: 19px
