--- a/source/sass/modules/_portfoliopost.sass
+++ b/source/sass/modules/_portfoliopost.sass
@@ -1,23 +1,45 @@
 .porfoliopost
 	font-size: 0
-	margin-bottom: 60px
+	margin-bottom: 45px
+
+	@media screen and (min-width: 650px)
+		margin-bottom: 60px
 
 .porfoliopost__left
-	width: 50%
+	width: 100%
 	display: inline-block
-	box-shadow: 0px 4px 8px #dedede
-	border: 1px solid #efefef
+
+	@media screen and (min-width: 650px)
+		width: 50%
 
 .porfoliopost__img
 	display: block
 	width: 100%
+	box-shadow: 0px 4px 8px #dedede
+	border: 1px solid #efefef
+
+.left__bottompart
+	display: none
+
+	@media screen and (min-width: 650px)
+		display: block
+		margin-top: 40px
+
+	@media screen and (min-width: 1024px)
+		display: none
 
 .porfoliopost__right
-	width: 50%
-	display: inline-block
-	font-size: 20px
-	vertical-align: top
-	padding: 0 30px
+	width: 100%
+	padding: 20px 0px 0px
+
+	@media screen and (min-width: 650px)
+		width: 50%
+		display: inline-block
+		padding: 0 30px
+		font-size: 20px
+		vertical-align: top
+		padding: 0px 20px
+
 
 .porfoliopost__title
 	font-size: 20px
@@ -33,16 +55,35 @@
 	text-align: left
 	padding: 12px 0 30px
 
+.right__bottompart
+	display: block
+
+	@media screen and (min-width: 650px)
+		display: none
+
+	@media screen and (min-width: 1024px)
+		display: block
+
 .porfoliopost__site
-	width: 62%
-	display: inline-block
+	width: 100%
+	display: block
+
+	@media screen and (min-width: 650px)
+		width: 66%
+		display: inline-block
+	@media screen and (min-width: 1024px)
+		width: 62%
 
 .porfoliopost__linksite
-	font-size: 30px
 	display: inline-block
 	color: $bold_gray
-	font-size: 20px
+	font-size: 18px
 	text-decoration: none
+
+	@media screen and (min-width: 650px)
+		font-size: 16px
+	@media screen and (min-width: 1024px)
+		font-size: 20px
 
 	&:hover
 		color: $azure
@@ -51,27 +92,50 @@
 	color: white
 	font-size: 40px
 	background-color: $violet
-	padding: 20px
+	padding: 13px
 	border-radius: 6px
 	margin-right: 7px
+
+	@media screen and (min-width: 650px)
+		padding: 14px
+		padding: 20px
 
 	&:hover
 		background-color: $azure
 
+
 .porfoliopost__button
-	width: 37%
-	vertical-align: top
-	display: inline-block
+	display: block
+	margin-top: 20px
+
+	@media screen and (min-width: 650px)
+		vertical-align: top
+		width: 34%
+		display: inline-block
+		margin-top: 0px
+
+	@media screen and (min-width: 1024px)
+		width: 37%
+		vertical-align: middle
 
 .porfoliopost__linkbutton
 	text-transform: uppercase
-	padding: 15px 40px
 	display: inline-block
 	background-color: $violet
 	color: white
 	font-weight: 400
 	text-align: center
-	font-size: 20px
+	font-size: 15px
+	letter-spacing: 1px
 	border-radius: 5px
+	padding: 11px 20px
+	@media screen and (min-width: 650px)
+		padding: 13px 11px
+		font-size: 15px
+
+	@media screen and (min-width: 1024px)
+		padding: 15px 38px
+		font-size: 20px
+
 	&:hover
 		background-color: $azure
