--- a/source/sass/modules/navigation.sass
+++ b/source/sass/modules/navigation.sass
@@ -20,6 +20,7 @@
 
 .breadcrumb__item
 	display: inline-block
+	text-transform: capitalize
 	margin-left: 7px
 
 	@media screen and (min-width: 650px)
