--- a/source/sass/modules/portfolio.sass
+++ b/source/sass/modules/portfolio.sass
@@ -1,15 +1,25 @@
 .portfoliotag
-	margin-bottom: 40px
+	margin-bottom: 25px
 	font-size: 0
+	@media screen and (min-width: 650px)
+		margin-bottom: 40px
 
 .portfoliotag__item
 	color: white
-	padding: 9px 23px
+	padding: 9px 13px
 	border-radius: 6px
 	display: inline-block
 	background-color: $azure
-	margin-right: 15px
-	font-size: 16px
+	font-size: 14px
 	text-transform: uppercase
+	margin-right: 8px
+	margin-bottom: 15px
+	@media screen and (min-width: 650px)
+		font-size: 16px
+		padding: 9px 23px
+		margin-right: 15px
+		margin-bottom: 0px
+		font-size: 16px
+
 	&:hover
 		background-color: $violet
