--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -1,4 +1,5 @@
 @import "modules/base"
+@import "modules/index"
 @import "modules/header"
 @import "modules/footer"
 @import "modules/contact"
@@ -7,3 +8,7 @@
 @import "modules/news"
 @import "modules/portfolio"
 @import "modules/portfoliopost"
+@import "modules/widget"
+@import "modules/grafic"
+@import "modules/clients"
+@import "modules/aboutUs"
