creazine pagina featurers

--- a/source/templates/features.liquid
+++ b/source/templates/features.liquid
@@ -9,7 +9,16 @@
 	{% include 'navigation' %}
 
 	<div class="container">
-		<h1>cioa</h1>
+
+		<div class="slideshow">
+			<div class=slideshow__img>
+				<img src="img/img_features.jpg" alt="" />
+			</div>
+			<h2 class="slideshow__title">ciaone</h2>
+
+
+		</div>
+
 	</div>
 
 
