--- a/source/sass/modules/_aboutUs.sass
+++ b/source/sass/modules/_aboutUs.sass
@@ -1,25 +1,25 @@
-.aboutTxt
-	padding-bottom: 30px
-	&.post
-		padding-top: 120px
-.aboutTxt__title
-	color: $azure
-	font-size: 30px
-	line-height: 24px
-	&.post-title
-		text-align: center
-		font-size: 40px
+// .aboutTxt
+// 	padding-bottom: 30px
+// 	&.post
+// 		padding-top: 120px
+// .aboutTxt__title
+// 	color: $azure
+// 	font-size: 30px
+// 	line-height: 24px
+// 	&.post-title
+// 		text-align: center
+// 		font-size: 40px
 
-.aboutTxt__txt
-	font-size: 14px
-	color: $txt_gray
-	line-height: 20px
-	padding: 17px 0px
+// .aboutTxt__txt
+// 	font-size: 14px
+// 	color: $txt_gray
+// 	line-height: 20px
+// 	padding: 17px 0px
 
-	&.post-txt
-		text-align: center
-		width: 90%
-		margin: 0 auto
+// 	&.post-txt
+// 		text-align: center
+// 		width: 90%
+// 		margin: 0 auto
 
 .title__widget
 	background-image: url('/img/path.png')
