--- a/source/sass/style.sass
+++ b/source/sass/style.sass
@@ -13,4 +13,5 @@
 @import "modules/clients"
 @import "modules/aboutUs"
 @import "modules/features"
-
+@import "modules/txtPrePost"
+@import "modules/services"
