--- a/source/templates/includes/txtPrePost.liquid
+++ b/source/templates/includes/txtPrePost.liquid
@@ -1,12 +1,3 @@
-{% extends layout %}
-{% block content %}
-{%assign section = "aboutUs"%}
-
-{% include 'header' %} 
-
-{% include 'navigation' %}
-
-{% include 'txtPrePost' %}
 <!-- <div class="container">
 	<div class="aboutTxt">
 		<h3 class="aboutTxt__title">
@@ -18,21 +9,7 @@
 	</div>
 </div> -->
 
-{% include 'grafic'%}
-
-<div class="title__widget">
-	<h3 class="title__widgetTitl">
-		our team	
-	</h3>
-</div>
-
-<div class="container aboutWidget">
-	{% include 'widget'%}	
-</div>		
-
-{% include 'txtPrePost' %}
-
-<!-- <div class="container">
+<div class="container">
 	<div class="aboutTxt post">
 		<h3 class="aboutTxt__title post-title">
 			Best Solution is the simplest IDEA!
@@ -41,16 +18,4 @@
 			Capacitance cascading integer reflective interface data development high bus cache dithering transponder. Curabitur vitae velit in neque dictum blandit. Proin in iaculis neque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
 		</p>
 	</div>
-</div> -->
-
-{% include 'clients'%}
-
-{% include 'footer' %}
-
-{% endblock %}
-
-
-
-
-
-
+</div>
