codereview primi problemini

--- a/source/sass/modules/_clients.sass
+++ b/source/sass/modules/_clients.sass
@@ -52,6 +52,11 @@
 		width: 13%
 		margin-left: 4%
 		
-		&:first-child :nth-child(3n+1)
+		&:nth-child(3n+1)
+			margin-left: 4%
+
+		&:first-child
 			margin-left: 0%
 		
+
+
