--- a/source/templates/includes/grafic.liquid
+++ b/source/templates/includes/grafic.liquid
@@ -1,7 +1,8 @@
 <div class="container sectList bodyColor">
 	<div class="sectionList section__end">
 		<p class="sectionList__title">
-			Why Choose Us?
+			<!-- Why Choose Us? -->
+			{{itemGrafic.title}}
 		</p>
 		<ul class="sectionList__content">
 			<li class="sectionList__list">
