--- a/source/sass/modules/_portfoliopost.sass
+++ b/source/sass/modules/_portfoliopost.sass
@@ -82,11 +82,16 @@
 
 	@media screen and (min-width: 650px)
 		font-size: 16px
+
 	@media screen and (min-width: 1024px)
 		font-size: 20px
 
 	&:hover
 		color: $azure
+
+		i
+			background-color: $azure
+			color: #fff
 
 .porfoliopost__icon
 	color: white
